fix: 상세 페이지와 관련된 컴포넌트 리팩토링 진행 (#47)
* chore: symbol.svg 추가

* chore: generate

* feat: sessionId를 추가 저장

* fix: flip 카드 뒷면 줄 제거

* fix: next-pick 컴포넌트 스타일 수정

* fix: 공유 페이지 데이터 페칭 로직 수정 및 Loading Screen 추가

* feat: 추천 결과 상세 페이지 컴포넌트 재작업

* feat: 이미지 저장 시 Sheet을 닫고 toast 알림 추가

* feat: URL 복사 시 Sheet을 닫고 toast 추가

* feat: 재사용되는 Login Dialog 및 훅을 별도 분리

* fix: 기타 스타일 수정

* chore: 주석 제거

* chore: 경로 수정

* fix: 구매하기 링크 연결

* fix: biome 린터 오류 수정 (#48)

---------
